# pipeline-data-rag-llm

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
app/api/: deps.py  main.py
app/api/routes/: pipeline.py
app/core/: config.py  db.py
app/pipeline/: __init__.py  graph.py
app/schemas/: pipeline.py  trip_record.py
app/services/: pipeline.py  storage.py
app/utils/: excel_utils.py  llm_utils.py
