[project]
name = "pipeline-products-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.137.1",
    "pymongo>=4.10",
    "openpyxl>=3.1.0",
    "langgraph>=0.6.0",
    "langchain-openai>=0.3.0",
    "langchain-core>=0.3.0",
    "pandas>=2.0.0",
    "python-multipart>=0.0.18",
    "openai>=1.51.0",
    "python-dotenv>=1.0.0",
]
